<resources>
    <string name="app_name">Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="menu_home">Register Here</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="EnterName">Name</string>
    <string name="EnterPassID">Passport ID</string>
    <string name="EnterStartAdd">Starting Address</string>
    <string name="EnterDestAdd">Destination Address</string>
    <string name="EnterPrice">Price</string>
    <string name="API_KEY">AIzaSyCY3wGcjUbexu5wGK0WjxLu9EFHTgZL0VY</string>
    <string name="textView">

    </string>
</resources>