<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:hint="@string/EnterName"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/EnterPassID"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passId"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/spinner_bg"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/EnterStartAdd"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/destAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/EnterDestAdd"
        app:layout_constraintTop_toBottomOf="@+id/startAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_dest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/EnterPrice"
        app:layout_constraintTop_toBottomOf="@+id/destAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView>

    </ImageView>
    <Button
        android:backgroundTint="@color/purple_500"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_size"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="Submit"
        android:textAllCaps="false"
        ></Button>
</androidx.constraintlayout.widget.ConstraintLayout>